--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="alternate icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon-fibi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FiBi</title>
   </head>
